[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nullstrike"
version = "0.1.0"
description = "Enhanced structural identifiability analysis with nullspace parameter combinations"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Vipul Singhal", email = "vs@alumni.caltech.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["identifiability", "observability", "dynamical systems", "parameter estimation"]
requires-python = ">=3.8"

dependencies = [
    "sympy>=1.9",
    "numpy>=1.21.0", 
    "matplotlib>=3.5.0",
    "networkx>=2.6",
    "symbtools>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "pre-commit>=2.15",
]
docs = [
    "mkdocs-material>=8.0",
    "mkdocstrings[python]>=0.19",
]

[project.urls]
Homepage = "https://github.com/yourusername/nullstrike"
Documentation = "https://yourusername.github.io/nullstrike/"
Repository = "https://github.com/yourusername/nullstrike"
"Bug Tracker" = "https://github.com/yourusername/nullstrike/issues"

[project.scripts]
nullstrike = "nullstrike.cli.complete_analysis:cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nullstrike = ["configs/*.py", "models/*.py"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=nullstrike --cov-report=term-missing"